B-02915 Content Manager App - Detail view fixes
Remove horizontal scrolling from detail view.

Also when no items are selected, there is both horizontal and vertical scrolling - but should not be any of these!

BTW: Like the "nothing selected" page :-)

remove horizontal scroll and add missing border

--- a/modules/wem-webapp/src/main/webapp/admin/resources/css/cms-preview-panel.css
+++ b/modules/wem-webapp/src/main/webapp/admin/resources/css/cms-preview-panel.css
@@ -143,7 +143,7 @@
     color: #000;
 }
 
-.admin-preview-panel .x-panel-body-default {
+.center .x-panel-body-default {
     border: 0 none;
 }
 
@@ -168,4 +168,9 @@ fieldset.admin-memberships-container {
 
 .admin-preview-panel .address .body table {
     margin: 0;
+}
+
+.admin-preview-panel > .x-panel-body {
+    overflow-x: hidden !important;
+    overflow-y: auto !important;
 }
